base video mechanism installed

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,6 +10,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#videos">Videos</a></li>
                 <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
             </ul>
         </div>
@@ -25,6 +26,7 @@
                 <p>
                     <a class="btn btn-primary" href="#about">Get Started</a>
                     <%= link_to 'home', root_path, class: 'btn btn-primary' %>
+                    <%= link_to 'videos', videos_path, class: 'btn btn-primary' %>
                 </p>
             </div>
         </div>
